--- a/default.hbs
+++ b/default.hbs
@@ -22,22 +22,24 @@
     {{ghost_head}}
 </head>
 <body class="{{body_class}}">
+    <div class="row">
+        <header id="site-head">
+            <div class="vertical">
+                <div id="site-head-content" class="inner">
+                   <a href="/"><h1 class="blog-title">{{@blog.title}}</h1></a>
+                   <h2 class="blog-description">{{@blog.description}}</h2>
+                </div>
+            </div>
+       </header>
+    <div>
 
     <div class="container">
         <div class="row">
-            <div id="content" class="col-sm-8">
-                <header id="site-head">
-                    <div class="vertical">
-                        <div id="site-head-content" class="inner">
-                            <a href="{{@blog.url}}"><h1 class="blog-title">{{@blog.title}}</h1></a>
-                            <h2 class="blog-description">{{@blog.description}}</h2>
-                        </div>
-                    </div>
-                </header>
+            <div id="content" class="col-sm-9">
                 {{! Everything else gets inserted here }}
                 {{{body}}}
             </div>
-            <div id="sidebar" class="col-sm-4">
+            <div id="sidebar" class="col-sm-3">
                 {{> sidebar}}
             </div>
         </div>
