--- a/post.hbs
+++ b/post.hbs
@@ -13,13 +13,14 @@
         {{! Everything below outputs content of the the post which has been published }}
 
         <h1 class="post-title">{{{title}}}</h1>
+	<hr/>
 
         <section class="post-content">
             {{content}}
         </section>
 
         <footer class="post-footer">
-            <span class="post-meta"><span class="label label-default"><time datetime="{{date format='YYYY-MM-DD'}}">{{date format="DD MMM YYYY"}}</time></span> {{#if tags}}on <span class="label label-default">{{tags}}</span>{{/if}}</span>
+            <span class="post-meta"><span class="label label-default"><time datetime="{{date format='YYYY-MM-DD'}}">{{date format="YYYY-MM-DD"}}</time></span> {{#if tags}}on <span class="label label-default">{{tags}}</span>{{/if}}</span>
             {{#if author}}
                 <hr/>
                 <section class="author">
